--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <header class="header">
     <div class="container">
-        <img src="imagens/logo.png" alt="Meles Conect Logo" class="logo">
+        <img src="imagens/logo nova texugo reduzida-2.png" alt="Meles Conect" class="logo">
         <nav class="nav">
+            <a href="https://melesconect.sgp.net.br/central" class="btn-central" target="_blank">Central do Assinante</a>
             <a href="#planos">Planos</a>
             <a href="#servicos">Serviços</a>
             <a href="#contato">Contato</a>
@@ -20,54 +21,70 @@
 </header>
 
 <section class="hero">
-    <h1>Internet Fibra Óptica de Alta Velocidade</h1>
-    <p>Conexão que transforma sua experiência online.</p>
-    <a href="#planos" class="btn">Ver Planos</a>
+    <div class="hero-content">
+        <h1>Internet Fibra Óptica de Alta Velocidade</h1>
+        <p>Conexão ultraveloz com a tecnologia que você merece.</p>
+        <a href="#planos" class="btn-main">Ver Planos Disponíveis</a>
+    </div>
 </section>
 
 <section id="planos" class="planos">
-    <h2>Planos de Internet</h2>
+    <h2>Nossos Planos</h2>
     <div class="cards">
         <div class="card">
             <h3>200MB</h3>
-            <p>Fibra Óptica</p>
-            <p class="preco">R$ 80,00/mês</p>
+            <span class="tech">Fibra Óptica</span>
+            <p class="preco">R$ 80,00<span>/mês</span></p>
         </div>
-        <div class="card">
+        <div class="card destaque"> <div class="badge">Mais Popular</div>
             <h3>400MB</h3>
-            <p>Fibra Óptica</p>
-            <p class="preco">R$ 100,00/mês>
+            <span class="tech">Fibra Óptica</span>
+            <p class="preco">R$ 100,00<span>/mês</span></p>
         </div>
         <div class="card">
             <h3>600MB</h3>
-            <p>Fibra Óptica</p>
-            <p class="preco">R$ 120,00/mês</p>
+            <span class="tech">Fibra Óptica</span>
+            <p class="preco">R$ 120,00<span>/mês</span></p>
         </div>
         <div class="card">
             <h3>800MB</h3>
-            <p>Fibra Óptica</p>
-            <p class="preco">R$ 160,00/mês</p>
+            <span class="tech">Fibra Óptica</span>
+            <p class="preco">R$ 160,00<span>/mês</span></p>
         </div>
     </div>
 </section>
 
 <section id="servicos" class="servicos">
-    <h2>Serviços Extras</h2>
-    <ul>
-        <li>IP Fixo – R$ 65,00/mês</li>
-        <li>Ponto WiFi 5G Extra – R$ 25,00/mês</li>
-    </ul>
+    <div class="container-servicos">
+        <h2>Serviços Adicionais</h2>
+        <div class="servicos-grid">
+            <div class="servico-item">
+                <strong>IP Fixo</strong>
+                <p>R$ 65,00/mês</p>
+            </div>
+            <div class="servico-item">
+                <strong>Ponto WiFi 5G Extra</strong>
+                <p>R$ 25,00/mês</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section id="contato" class="contato">
-    <h2>Contato</h2>
-    <p>Telefone: (13) 98873-1474</p>
-    <p>Email: contato@melesconect.com</p>
+    <h2>Fale Conosco</h2>
+    <div class="contato-info">
+        <p><strong>WhatsApp:</strong> (13) 98873-1474</p>
+        <p><strong>Email:</strong> contato@melesconect.com</p>
+    </div>
 </section>
 
 <footer>
-    <p>© 2026 Meles Conect. Todos os direitos reservados.</p>
+    <p>© 2026 Meles Conect. Conectando você ao futuro.</p>
 </footer>
+
+<a href="https://abre.ai/meleszap" class="whatsapp-float" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+</a>
 
 </body>
 </html>
